fix: prevent sidebar height collapse when offers 0

--- a/src/app/offers/offers.component.scss
+++ b/src/app/offers/offers.component.scss
@@ -1,3 +1,7 @@
+mat-drawer-container {
+    min-height: 512px;
+}
+
 mat-drawer-content {
     max-width: 840px;
 }
